# project2_andreenko_dpo

./: .gitignore  README.md  crud.cast  pyproject.toml
data/: users.json
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
